--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.13",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.29.0",
-    "vite": "^5.4.8"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.9"
   }
 }
